--- a/110/resume/index.html
+++ b/110/resume/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<title>Resume: Joshua Remlinger</title>
 		<meta charset="utf-8" />
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<p>
-			<br />
-			<img width="300px" src="img/myName.png" />
+			<img width="300px" src="img/myNameNoBG.png" />
 			<!--'address' tag used to specify section as contact information-->
 			<address>
 				Lebanon, PA
@@ -17,7 +17,7 @@
 				(717) 450-2085
 			</address>
 		</p>
-		<p>Authorized to work in the US for any employer</p>
+		<small>Authorized to work in the US for any employer</small>
 		<p>
 			<h2>Work Experience</h2>
 			<hr />
@@ -25,17 +25,18 @@
 				<strong>Crew Member</strong>
 				<br />
 				Dairy Queen - Lebanon. PA
-				<ul>
-					<li>Prepared and served food</li>
-					<li>Cleaned dishes</li>
-					<li>Cleared tables</li>
-					<li>Closed and cleaned dining room</li>
-				</ul>
 			</p>
+			<ul>
+				<li>Prepared and served food</li>
+				<li>Cleaned dishes</li>
+				<li>Cleared tables</li>
+				<li>Closed and cleaned dining room</li>
+			</ul>
 			<p>
 				<Strong>Crew Member</Strong>
 				<br />
 				Wendy's - Lebanon. PA
+			</p>
 				<ul>
 					<li>Communicated with vendors</li>
 					<li>Welcomed all customers</li>
@@ -44,7 +45,6 @@
 					<li>Cleared tables</li>
 					<li>Provided exceptional customer service</li>
 				</ul>
-			</p>
 			<h2>Education</h2>
 			<hr />
 			<p>
@@ -66,13 +66,10 @@
 			</ul>
 			<h2>Awards</h2>
 			<hr />
-			<strong>Workplace Readiness Certificate</strong>
-			<br />
-			<!--Date is set off again using 'i'-->
-			<i>2019</i>
+			<strong>Workplace Readiness Certificate - 2019</strong>
 		</p>
 		<br />
 		<!--Information about document presented as small print using 'small' tag-->
-		<small>Resume document created by Joshua Remlinger using Visual Studio Code alongside HTML5</small>
+		<small >Resume document created by Joshua Remlinger using Visual Studio Code alongside HTML5</small>
 	</body>
 </html>
